--- a/index.html
+++ b/index.html
@@ -50,49 +50,49 @@
     <section class="turpis">
           <div class="turpis-filtro">
             <div class="container">
-              <h2 class="turpis-titulo">SEM TURPIS AMET SEMPER</h2>
+              <h2 class="turpis-subtitulo">Sem Turpis Amet Semper</h2>
               <p class="turpis-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare  aliquet accumsan erat tempus amet porttitor.</p>
               <!-- Turpis Lista - Inicio -->
               <div class="lista-de-vantagem row">
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-id-card vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">FEUGIAT CONSEQUAT</h3>
+                      <h3 class="vantagem-subtitulo">Feugiat Conseguat</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-file-alt vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">ANTE SEM INTEGER</h3>
+                      <h3 class="vantagem-subtitulo">Ante sem Integer</h3>
                       <p  class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-save vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">IPSUM CONSEQUAT</h3>
+                      <h3 class="vantagem-subtitulo">Ipsum Conseguat</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-chart-bar vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">INTERDUM GRAVIDA</h3>
+                      <h3 class="vantagem-subtitulo">Interdum Gravida</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-paper-plane vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">FAUCIBUS CONSEQUAT</h3>
+                      <h3 class="vantagem-subtitulo">Faucibus Conseguat</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
                     </div>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="vantagem-item">
                       <a href="#"><i class="far fa-square vantagem-icone"></i></a>
-                      <h3 class="vantagem-subtitulo">ACCUMSAN VIVERRA</h3>
+                      <h3 class="vantagem-subtitulo">Accumsan Viverra</h3>
                       <p class="vantagem-paragrafo">Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi
                               integer non faucibus.</p>
                     </div>
@@ -108,7 +108,7 @@
     <section class="curabitur">
         <div class="curabitur-filtro">
           <div class="curabitur-texts container">
-            <h2 class="curabitur-subtitulo">CURABITUR ULLAMCORPER ULTRICIES</h2>
+            <h2 class="curabitur-subtitulo">Curabitur Ullamcorper Ultricies</h2>
             <p class="curabitur-paragrafo">Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
           </div>
         </div>
@@ -119,7 +119,7 @@
     <section class="faucibus">
       <div class="faucibus-filtro">
         <div class="container">
-          <h2 class="faucibus-subtitulo">FAUCIBUS CONSEQUAT LOREM</h2>
+          <h2 class="faucibus-subtitulo">Faucibus Conseguat Lorem</h2>
           <p class="faucibus-paragrafo">In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
           <!-- Faucibus Lista - Inicio -->
           <div class="row faucibus-lista-avaliacao">
@@ -168,13 +168,13 @@
       <div class="container">
         <!-- Footer Listas - Inicio -->
         <div class="row rotape-lista">
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
             <div class="rotape-item">
               <h3 class="rotape-subtitulo">Accumsan montes viverra</h3>
               <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
             <div class="rotape-item">
               <h3 class="rotape-subtitulo">Sem turpis amet semper</h3>
               <ul class="rotape-lista-links">
@@ -185,7 +185,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div class="rotape-item">
               <h3 class="rotape-subtitulo">Magna sed ipsum</h3>
               <div class="rotape-rede-social">
